Banner section added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New year new me</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- font famili link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="right-container"></div>
+      <div class="left-container">
+        <h1 class="banner-heading">
+          All Thinks Are<br />
+          Possible If You<br />
+          believe
+        </h1>
+        <p class="banner-description">
+          There are many variations of passages of Lorem Ipsum <br />
+          available, but the majority have suffered alteration in some <br />
+          form, by injected humour, or randomised words
+        </p>
+        <button class="contact-btn">Contact Us</button>
+      </div>
+    </header>
   </body>
 </html>
