--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -30,5 +37,44 @@
         <button class="contact-btn">Contact Us</button>
       </div>
     </header>
+    <main>
+      <section>
+        <div class="failure-list-section">
+          <div class="left-failure">
+            <img class="left-image" src="./images/person.png" alt="" />
+          </div>
+          <div class="right-failure">
+            <h3 class="failure-heading">My failures of <br />previous year</h3>
+            <p class="failure-description">
+              Contrary to popular belief, Lorem Ipsum is not <br />
+              simply random text. It has roots in a piece of<br />
+              classical Latin literature from 45 BC, making it over <br />
+              2000 years old. Richard McClintock.
+            </p>
+            <ul class="failure-list">
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular , is not
+                simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+                not simply.
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i> Contrary to popular simply.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
   </body>
 </html>
