Plan section added

--- a/index.html
+++ b/index.html
@@ -74,6 +74,33 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="plan-title">
+          <h1>My Plans</h1>
+        </div>
+        <div class="my-plan-section">
+          <div class="plan">
+            <img class="icon" src="./images/icons/web.png" alt="" />
+            <h1 class="plan-heading">Web Development</h1>
+            <p class="plan-desc">I want to start</p>
+          </div>
+          <div class="plan">
+            <img class="icon" src="./images/icons/js.png" alt="" />
+            <h1 class="plan-heading">Javascript</h1>
+            <p class="plan-desc">I want to learn</p>
+          </div>
+          <div class="plan">
+            <img class="icon" src="./images/icons/smoke.png" alt="" />
+            <h1 class="plan-heading">Smoking Habit</h1>
+            <p class="plan-desc">I want to end</p>
+          </div>
+          <div class="plan">
+            <img class="icon" src="./images/icons/ecom.png" alt="" />
+            <h1 class="plan-heading">Ecommerce</h1>
+            <p class="plan-desc">I want to develop</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
