--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="watch-section">
+          <div class="watch-content">
+            <div class="watch-heading">
+              <h4>
+                Always keep a positive <br />
+                mindset
+              </h4>
+            </div>
+            <button class="contact-btn call-btn">Call Now</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
