Footer and all done

--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section>
+        <div class="footer">
+          <div class="left-div">
+            <h3 class="footer-title">Future</h3>
+            <p class="footer-desc">
+              There are many variations of passages of Lorem Ipsum <br />
+              available, but the majority have suffered alteration in some<br />
+              form, by injected humour, or randomised words
+            </p>
+            <p class="footer-email-phone">ishtiak.sparrow98@gmail.com</p>
+            <p class="footer-email-phone">01737-223990</p>
+            <a href="">
+              <img class="social" src="./images/icons/fb.png" alt=""
+            /></a>
+            <a href="">
+              <img class="social" src="./images/icons/twitter.png" alt=""
+            /></a>
+            <a href="">
+              <img class="social" src="./images/icons/youtube.png" alt=""
+            /></a>
+          </div>
+          <div class="right-div">
+            <h4 class="right-footer-heading">Subscribe</h4>
+            <input type="email" placeholder="Enter Your Email" />
+            <button class="contact-btn call-btn">Subscribe</button>
+          </div>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
